--- a/asdcouch/couchapp.rc
+++ b/asdcouch/couchapp.rc
@@ -1,10 +1,10 @@
 {
   "env": {
-    "local": {
+    "couch": {
       "db": "http://127.0.0.1:5984/asdrecipes"
     },
     "cloudant": {
-      "db": "https://thimeddringshowseturrace:6uMRttn8lqrextPYr0tYW3SK@jsnyder28.cloudant.com/asdrecipes"
+      "db": "https://thimeddringshowseturrace:6uMRttn8lqrextPYr0tYW3SK@jsnyder28.cloudant.com/asdrecipes/"
     }
   }
 }
